[tool.poetry]
name = "festivo-python"
version = "0.1.11"
description = "Official Python SDK for Festivo Public Holidays API - Access 100+ countries' holiday data with UTC dates"
authors = ["Festivo <support@getfestivo.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://getfestivo.com"
repository = "https://github.com/festivo-io/festivo-sdk"
documentation = "https://docs.getfestivo.com"
keywords = ["festivo", "holidays", "public-holidays", "api", "calendar", "python", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
	{ include = "festivo" }
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-mock = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=festivo --cov-report=term-missing"
